<?xml version="1.0"?>
<package>
  <name>navigator_missions</name>
  <version>0.0.0</version>
  <description>The navigator_missions package</description>
  <maintainer email="zachgoins@todo.todo">zachgoins</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>